--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -429,7 +429,7 @@
                 </a>
 
                 <!-- Project 2: Frontend Experiment - FIXED LINK -->
-                <a href="https://codepen.io/YugeswaranD/full/PwNJwdE" target="_blank" class="group project-card relative rounded-3xl overflow-hidden cursor-pointer hoverable reveal block">
+                <a href="https://weatherapp6010.netlify.app/" target="_blank" class="group project-card relative rounded-3xl overflow-hidden cursor-pointer hoverable reveal block">
                     <div class="aspect-[4/3] overflow-hidden">
                         <img src="https://images.unsplash.com/photo-1605379399642-870262d3d051?q=80&w=2000&auto=format&fit=crop" alt="CodePen Project" class="project-img w-full h-full object-cover transition-transform duration-700">
                     </div>
@@ -1058,3 +1058,4 @@
     </script>
 </body>
 </html>
+
